<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_numpy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zyadan@todo.todo">zyadan</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>python3-transforms3d</depend>
  <depend>python3-numpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>python3-nose</test_depend>
  <test_depend>rclpy</test_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
